[tool.poetry]
name = "module-11"
version = "0.1.0"
description = ""
authors = ["AnatoliiBrovko <116496024+AnatoliiBrovko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "module_11"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.18"
fastapi = "^0.100.0"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
pydantic = {extras = ["email"], version = "^2.0.3"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
